--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,13 +15,20 @@
                 "https://*/*"
             ],
             "css": [
-                "styles/main.css"
+                "bower_components/angular/angular-csp.css"
+
+
             ],
             "js": [
+                "bower_components/angular/angular.min.js",
                 "scripts/contentscript.js"
             ],
             "run_at": "document_end",
             "all_frames": false
         }
+    ],
+    "content_security_policy": "script-src 'self'; object-src 'self'",
+    "web_accessible_resources": [
+        "bower_components/angular/*"
     ]
 }
